# Estate-and-Tax-Document-Analyzer

./: .gitignore  GUI.py  README.md  app.py  main.py  pyproject.toml
modules/: ocr_utils.py  po_constants.py  po_extractor.py  poa_extractor.py  tax_extractor.py
prompts/: poa_extract_prompt.txt  poa_template.txt  vision_prompt.txt
